# stagen

./: Makefile-alpine  Makefile-debian  README.md  meson.build  stage.c
Makefiles/: Makefile
README/: README.md
addons/: ss_window  tbar  termbar
addons/select_area/: build.sh  select_area.c
conf/: config.h
